# server-hub

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  backup.sh  compose.yaml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
frontend/: admin.html  dashboard.html  login.html  profile.html  register.html
frontend/css/: admin.css  dashboard.css  login.css  profile.css  register.css
frontend/js/: admin.js  dashboard.js  login.js  profile.js  register.js
migrations/: env.py
migrations/versions/: 1126aebdc103_add_server_reports_table.py  1e96cbcd4665_create_users_table.py  ae2a199a1e7d_add_server_reports_table.py
src/: main.py
src/api/: admin.py  auth.py  reports.py  system.py
src/core/: config.py  database.py  init_db.py  logging.py  scheduler.py  security.py
src/models/: report.py  user.py
src/schemas/: report.py  user.py
src/services/: alert.py
src/templates/: base.html  login.html
tests/: conftest.py  test_auth.py  test_health.py
