[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-app"
version = "0.1.0"
description = "FastAPI application with JWT auth, MySQL, observability"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Your Name", email = "your-email@example.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.38.0",
    "sqlalchemy==2.0.49",
    "aiomysql==0.3.2",
    "mysqlclient==2.2.4",
    "pydantic==2.13.0",
    "pydantic-settings==2.7.0",
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "loguru==0.7.3",
    "psutil==7.2.0",
    "aiosmtplib==5.1.0",          # stable, supports Python 3.14
    "python-multipart==0.0.20",
    "alembic==1.16.5",
    "bcrypt==4.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==0.26.0",
    "httpx==0.28.1",
    "pytest-env==1.2.0",
    "testcontainers[mysql]==4.14.2",   # last stable before 4.15.x (which has no release)
    "pytest-xdist==3.8.0",
    "ruff==0.13.0",
    "pymysql==1.1.2",
    "pre-commit==4.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
env = [
    "ENVIRONMENT=testing",
    "DATABASE_URL=mysql+aiomysql://root:testpass@localhost:3306/testdb",
]
testpaths = ["tests"]